# KKD

./: .gitignore  ReadME.md
entropy/: Cargo.toml
entropy/src/: lib.rs
lista1/: Cargo.toml
lista1/src/: libs.rs  main.rs
lista1/src/libs/: exercises.rs  functions.rs  helpers.rs  mod.rs
lista2/: Cargo.toml
lista2/src/: lib.rs  main.rs
lista2/src/lib/: code.rs
lista2/src/libs/: bitio.rs  byteio.rs  code.rs  compressor.rs  decompressor.rs  helpers.rs  mod.rs  model_a.rs  model_metrics.rs
lista3/: Cargo.toml
lista3/src/libs/: bitvec.rs  coding_types.rs  decoder.rs  encoder.rs  mod.rs
lista3/src/libs/coders/: delta.rs  fibbonacci.rs  gamma.rs  mod.rs  omega.rs
lista4/: Cargo.toml
lista4/src/: main.rs
lista4/src/lib/: image.rs  pixel.rs
lista5/: Cargo.toml
lista5/src/: main.rs
lista5/src/lib/: image.rs  pixel.rs
lista6/: Cargo.toml
lista6/src/: image.rs  lib.rs  pixel.rs
lista7/: Cargo.toml
lista7/src/: bitvec.rs  lib.rs
lista7/testy/: pan-tadeusz2.txt
