[package]
name = "lista5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entropy = { version = "0.1.0", path = "../entropy" }
image = "0.24.7"
log = "0.4.20"
rayon = "1.8.0"
tokio = { version = "1.35.1", features = ["full"] }
